--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <div class="header-top-right">
                 <div class="phones-block">
                     <ul class="priority-phones">
-                            <li id="tel_num1"><a href="tel:+380577780644">+38 (057) 778 06 44</a></li>
-                            <li id="tel_num2"><a href="tel:+380577780645">+38 (057) 778 06 45</a></li>
+                        <li id="tel_num1"><a href="tel:+380577780644">+38 (057) 778 06 44</a></li>
+                        <li id="tel_num2"><a href="tel:+380577780645">+38 (057) 778 06 45</a></li>
                     </ul>
                     <div class="more_btn open_btn"></div>
                     <div class="phones-popup">
@@ -33,7 +33,7 @@
                             <li><a href="tel:+380577780639">+38 (057) 778 06 39</a></li>
                         </ul>
                         <div class="border-line"></div>
-                        <div class="phones-header">Oтдел продаж: </div>
+                        <div class="phones-header">Oтдел продаж:</div>
                         <ul>
                             <li><a href="tel:+380577780639">+38 (057) 778 06 39 (40,44,45)</a></li>
                             <li><a href="tel:+380500138075">+38 (050) 013 80 75</a></li>
@@ -67,16 +67,16 @@
                     <img src="media/burger.svg" alt=""></span>
                 </button>
                 <div class="collapse navbar-collapse " id="navbar">
-                        <button
-                        class="close-menu-btn navbar-toggler"
-                        type="button"
-                        data-toggle="collapse"
-                        data-target="#navbar"
-                        aria-controls="navbar"
-                        aria-expanded="false"
-                        aria-label="Toggle navigation">
-                    </span>
-                </button>
+                    <button
+                            class="close-menu-btn navbar-toggler"
+                            type="button"
+                            data-toggle="collapse"
+                            data-target="#navbar"
+                            aria-controls="navbar"
+                            aria-expanded="false"
+                            aria-label="Toggle navigation">
+                        </span>
+                    </button>
                     <ul class="nav">
                         <li class="nav-item">
                             <a class="nav-link">О компании</a>
@@ -160,52 +160,52 @@
             <div class="form-btn gradient-btn open_btn" id="ask-btn">
                 <span class="open_btn">ЗАДАТЬ ВОПРОС</span>
             </div>
-<!--            <div class="form-wrap">-->
+            <!--            <div class="form-wrap">-->
             <div class="contact-form">
 
-                    <p>Вы можете задать вопрос, заполнив форму, и наши менеджеры ответят вам в самое ближайшее время!</p>
-                    <span class="form-btn">
+                <p>Вы можете задать вопрос, заполнив форму, и наши менеджеры ответят вам в самое ближайшее время!</p>
+                <span class="form-btn">
                 <img src="media/close.svg" alt="">
             </span>
-                    <form action="">
-                        <div class="form-item">
-                            <input type="text" placeholder="Имя:" name="name" id="name" autocomplete="off">
-                            <label for="name">Имя:</label>
-                        </div>
-                        <div class="form-item">
-                            <input type="tel" placeholder="Телефон:" name="tel" id="tel" autocomplete="off">
-                            <label for="tel">Телефон:</label>
-                        </div>
-                        <div class="form-item">
-                            <input type="email" placeholder="Email:" name="email" id="email" autocomplete="off">
-                            <label for="email">Email:</label>
-                        </div>
-                        <div class="form-item">
-                            <input type="text" placeholder="Организация:" name="org" id="org" autocomplete="off">
-                            <label for="org">Организация:</label>
-                        </div>
-                        <div class="form-item">
-                            <textarea name="message" id="message" cols="3" rows="2" placeholder="Сообщение:"></textarea>
-                            <label for="message">Сообщение:</label>
-                        </div>
-                        <div class="download-file">
-                            Прикрепить фаил
-                            <input id="file" type="file" multiple>
-                            <label for="file"></label>
-                            <div>
-                                Загруженно файлов: <span class="files-count">0</span>
-                            </div>
-                            <div class="allow-files">
-                                Максимальный размер файла: <span>9.91 MB</span>
-                            </div>
-                            <div class="alert-message">
-                                <span>размер файла превышает максимальный</span></div>
-                        </div>
+                <form action="">
+                    <div class="form-item">
+                        <input type="text" placeholder="Имя:" name="name" id="name" autocomplete="off">
+                        <label for="name">Имя:</label>
+                    </div>
+                    <div class="form-item">
+                        <input type="tel" placeholder="Телефон:" name="tel" id="tel" autocomplete="off">
+                        <label for="tel">Телефон:</label>
+                    </div>
+                    <div class="form-item">
+                        <input type="email" placeholder="Email:" name="email" id="email" autocomplete="off">
+                        <label for="email">Email:</label>
+                    </div>
+                    <div class="form-item">
+                        <input type="text" placeholder="Организация:" name="org" id="org" autocomplete="off">
+                        <label for="org">Организация:</label>
+                    </div>
+                    <div class="form-item">
+                        <textarea name="message" id="message" cols="3" rows="2" placeholder="Сообщение:"></textarea>
+                        <label for="message">Сообщение:</label>
+                    </div>
+                    <div class="download-file">
+                        Прикрепить фаил
+                        <input id="file" type="file" multiple>
+                        <label for="file"></label>
                         <div>
+                            Загруженно файлов: <span class="files-count">0</span>
                         </div>
-                        <button class="gradient-btn">отправить</button>
-                    </form>
-<!--                </div>-->
+                        <div class="allow-files">
+                            Максимальный размер файла: <span>9.91 MB</span>
+                        </div>
+                        <div class="alert-message">
+                            <span>размер файла превышает максимальный</span></div>
+                    </div>
+                    <div>
+                    </div>
+                    <button class="gradient-btn">отправить</button>
+                </form>
+                <!--                </div>-->
             </div>
         </div>
         <div class="search-wrap">
@@ -323,49 +323,59 @@
             <h1>Новости</h1>
             <div class="news-flex">
                 <div class="card">
-                    <img src="media/home-newes1.png" alt="">
-                    <span>24/04/2019</span>
-                    <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого
-                        сечения КО 100</p>
-                    <a class="link link--arrowed" href="news-item.html">
-                        <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-                            <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
-                                <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
-                                <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
-                            </g>
-                        </svg>
-                    </a></div>
-                <div class="card">
-                    <img src="" alt="">
-                    <span>24/04/2019</span>
-                    <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого
-                        сечения КО 100</p>
-                    <a class="link link--arrowed" href="news-item.html">
-                        <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-                            <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
-                                <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
-                                <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
-                            </g>
-                        </svg>
-                    </a></div>
-                <div class="card-column">
-                    <div class="card-sm">
+                    <a href="">
                         <img src="media/home-newes1.png" alt="">
-                        <div>
-                            <span>24/04/2019</span>
-                            <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
-                                круглого сечения КО 100</p>
-                        </div>
-                        <a class="link link--arrowed" href="news-item.html">
+                        <span>24/04/2019</span>
+                        <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
+                            круглого
+                            сечения КО 100</p>
+                        <span class="link--arrowed">
+                        <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                            <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                            </g>
+                        </svg>
+                    </span>
+                    </a>
+                </div>
+                    <div class="card">
+                        <a href="">
+                        <img src="" alt="">
+                        <span>24/04/2019</span>
+                        <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого
+                            сечения КО 100</p>
+                        <span class="link--arrowed">
                             <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                                 <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
                                     <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
                                     <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
                                 </g>
                             </svg>
+                        </span>
+                        </a>
+                    </div>
+                <div class="card-column">
+                    <div class="card-sm">
+                        <a href="">
+                        <img src="media/home-newes1.png" alt="">
+                        <div>
+                            <span>24/04/2019</span>
+                            <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
+                                круглого сечения КО 100</p>
+                        </div>
+                        <span class="link--arrowed">
+                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                                <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                    <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                    <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                                </g>
+                            </svg>
+                        </span>
                         </a>
                     </div>
                     <div class="card-sm">
+                        <a href="">
                         <!--                    <img src="" alt="">-->
                         <div>
                             <span>24/04/2019</span>
@@ -373,13 +383,14 @@
                                 круглого сечения КО 100</p>
                         </div>
 
-                        <a class="link link--arrowed" href="news-item.html">
+                        <span class="link--arrowed">
                             <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                                 <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
                                     <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
                                     <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
                                 </g>
                             </svg>
+                        </span>
                         </a>
                     </div>
                 </div>
