--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,7 @@
                         <li>
                             <a href="https://www.google.com/webhp?hl=ru&sa=X&ved=0ahUKEwi30dqp7vLiAhUt6KYKHf44CZIQPAgH">оборудование</a>
                             <ul class="drop-menu">
-                                <li>
+                                <li class="activeItem">
                                     <a href="#">Вентиляторы дымоудаления </a>
                                 </li>
                                 <li>
@@ -73,7 +73,7 @@
             </div>
             <div class="col-md-8 col-lg-9">
                 <div class="container">
-                    <div class="catalog-item row">
+                    <a href=""><div class="catalog-item row">
                         <div class="col-md-3">
                             <img src="media/catalog-img.png" alt="">
                         </div>
@@ -81,16 +81,16 @@
                             <h4>Кондиционеры центральные каркасные (приточные, приточно-вытяжные установки) типа КЦК</h4>
                             <p>Проектирование, производство, продажа и монтаж кондиционеров КЦК (кондиционеры центральные каркасные, приточные, приточно-вытяжные установки) в соответствии с ТУ У 29.2-24472991-020:2009.</p>
                         </div>
-                        <a class="link link--arrowed" href="#">
+                        <span class="link--arrowed">
                             <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                                 <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
                                     <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
                                     <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
                                 </g>
                             </svg>
-                        </a>
-                    </div>
-                    <div class="catalog-item row">
+                        </span>
+                    </div></a>
+                    <a href=""><div class="catalog-item row">
                         <div class="col-md-3">
                             <img src="media/catalog-img.png" alt="">
                         </div>
@@ -98,16 +98,16 @@
                             <h4>Кондиционеры центральные каркасные (приточные, приточно-вытяжные установки) типа КЦК</h4>
                             <p>Проектирование, производство, продажа и монтаж кондиционеров КЦК (кондиционеры центральные каркасные, приточные, приточно-вытяжные установки) в соответствии с ТУ У 29.2-24472991-020:2009.</p>
                         </div>
-                        <a class="link link--arrowed" href="#">
+                        <span class="link--arrowed">
                             <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                                 <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
                                     <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
                                     <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
                                 </g>
                             </svg>
-                        </a>
-                    </div>
-                    <div class="catalog-item row">
+                        </span>
+                    </div></a>
+                    <a href=""><div class="catalog-item row">
                         <div class="col-md-3">
                             <img src="media/catalog-img.png" alt="">
                         </div>
@@ -115,16 +115,15 @@
                             <h4>Кондиционеры центральные каркасные (приточные, приточно-вытяжные установки) типа КЦК</h4>
                             <p>Проектирование, производство, продажа и монтаж кондиционеров КЦК (кондиционеры центральные каркасные, приточные, приточно-вытяжные установки) в соответствии с ТУ У 29.2-24472991-020:2009.</p>
                         </div>
-                        <a class="link link--arrowed" href="#">
+                        <span class="link--arrowed">
                             <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                                 <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
                                     <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
                                     <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
                                 </g>
                             </svg>
-                        </a>
-                    </div>
-
+                        </span>
+                    </div></a>
                 </div>
 
             </div>
