--- a/news-item.html
+++ b/news-item.html
@@ -8,6 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/fontawesome.min.css">
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -20,8 +21,10 @@
                 <div class="news-date">22/04/2019</div>
                 <div class="news-descr">
                     <p>Клапаны обратные КО 100 изготавливаются в соответствие с ТУ У В.2.5-29.1-24472991-018:2006 и предназначены для предотвращения перетекания воздуха и
-                        невзрывоопасных воздушных смесей, агрессивность которых по отношению к углеродистым сталям обыкновенного качества не выше агрессивности воздуха, с температурой
-                        от минус 40°С до плюс 80°С, не содержащих липких веществ и волокнистых материалов, с содержанием пыли и других твердых примесей в количестве не более 100 мг/м3,
+                        невзрывоопасных воздушных смесей, агрессивность которых по отношению к углеродистым сталям обыкновенного качества не выше агрессивности воздуха, с
+                        температурой
+                        от минус 40°С до плюс 80°С, не содержащих липких веществ и волокнистых материалов, с содержанием пыли и других твердых примесей в количестве не более 100
+                        мг/м3,
                         через ответвления к отключенным вентиляторам (от ответлений отключенных вентиляторов) при присоединении откключенных вентиляторов к коллекторам.</p>
                     <img src="media/home-newes1.png" alt="">
                 </div>
@@ -37,14 +40,20 @@
                 <p>Клапаны обратные КО.100 применяются в системах вентиляции с рабочим давлением до 800 Па.</p>
                 <div class="news-img">
                     <div>
-                        <img src="media/home-newes1.png" alt="">
+                        <a data-fancybox="newsGallery" href="media/home-newes1.png">
+                            <img src="media/home-newes1.png" alt="">
+                        </a>
                     </div>
                     <div>
-                        <img src="media/home-newes1.png" alt="">
+                        <a data-fancybox="newsGallery" href="media/home-newes1.png">
+                            <img src="media/home-newes1.png" alt="">
+                        </a>
                     </div>
                     <div>
-                    <img src="media/home-newes1.png" alt="">
-                </div>
+                        <a data-fancybox="newsGallery" href="media/home-newes1.png">
+                            <img src="media/home-newes1.png" alt="">
+                        </a>
+                    </div>
                 </div>
                 <div class="back-btn">
                     <a href="#" class="cta">
@@ -107,6 +116,7 @@
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/slick.min.js"></script>
+<script src="js/jquery.fancybox.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
