--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </span>
                     </button>
                     <ul class="nav">
-                        <li class="nav-item">
+                        <li class="nav-item current-link">
                             <a class="nav-link">О компании</a>
                             <div class="drop-menu">
                                 <a class="dropdown-item" href="about.html">О нас</a>
