fixes, nav menu hover

--- a/contacts.html
+++ b/contacts.html
@@ -197,7 +197,7 @@
     </section>
     <section class="map-wrap">
         <div class="container">
-            <script type="text/javascript" src="//maps-js.apissputnik.ru/v0.3/loader.js?1ngoHWxToT5b"></script>
+            <script type="text/javascript" src="//maps-js.apissputnik.ru/v0.3/loader.js?1ItMl5YCyrlc"></script>
         </div>
     </section>
 </main>
