--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <span class="open_btn">ЗАДАТЬ ВОПРОС</span>
             </div>
             <!--            <div class="form-wrap">-->
-            <div class="contact-form">
+            <div class="contact-form" id="contact-form-header">
 
                 <p>Вы можете задать вопрос, заполнив форму, и наши менеджеры ответят вам в самое ближайшее время!</p>
                 <span class="form-btn">
