--- a/catalog.html
+++ b/catalog.html
@@ -59,10 +59,10 @@
                             <a href="">Сетевое оборудование</a>
                             <ul class="drop-menu"><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/setevoe-oborudovanie/uzly-prohoda-deflektory-zonty-dveri-shumoglushiteli/">Узлы прохода, дефлекторы, зонты, двери, шумоглушители</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/setevoe-oborudovanie/klapany-i-zaslonki/">Клапаны и заслонки</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/setevoe-oborudovanie/filtry-irp/">Фильтры, ИРП</a></li></ul>
                         </li>
-                        <li>
+                        <li >
                             <a href="#">Автоматизация</a>
                         </li>
-                        <li>
+                        <li class="active-item">
                             <a href="#">Отопительное оборудование</a>
                         </li>
                         <li>
@@ -131,6 +131,7 @@
     </div>
 <div class="pagination">
     <div class="prev-page"><a href=""></a></div>
+    <span><a href="">1</a></span>
     <span><a href="">1</a></span>
     <span><a href="">2</a></span>
     <span><a href="">3</a></span>
