--- a/index.html
+++ b/index.html
@@ -339,11 +339,12 @@
                     </span>
                     </a>
                 </div>
-                    <div class="card">
-                        <a href="">
+                <div class="card">
+                    <a href="">
                         <img src="" alt="">
                         <span>24/04/2019</span>
-                        <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого
+                        <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
+                            круглого
                             сечения КО 100</p>
                         <span class="link--arrowed">
                             <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
@@ -353,18 +354,19 @@
                                 </g>
                             </svg>
                         </span>
-                        </a>
-                    </div>
+                    </a>
+                </div>
                 <div class="card-column">
                     <div class="card-sm">
                         <a href="">
-                        <img src="media/home-newes1.png" alt="">
-                        <div>
-                            <span>24/04/2019</span>
-                            <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
-                                круглого сечения КО 100</p>
-                        </div>
-                        <span class="link--arrowed">
+                            <img src="media/home-newes1.png" alt="">
+                            <div>
+                                <span>24/04/2019</span>
+                                <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов
+                                    обратных
+                                    круглого сечения КО 100</p>
+                            </div>
+                            <span class="link--arrowed">
                             <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                                 <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
                                     <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
@@ -376,14 +378,15 @@
                     </div>
                     <div class="card-sm">
                         <a href="">
-                        <!--                    <img src="" alt="">-->
-                        <div>
-                            <span>24/04/2019</span>
-                            <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
-                                круглого сечения КО 100</p>
-                        </div>
+                            <!--                    <img src="" alt="">-->
+                            <div>
+                                <span>24/04/2019</span>
+                                <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов
+                                    обратных
+                                    круглого сечения КО 100</p>
+                            </div>
 
-                        <span class="link--arrowed">
+                            <span class="link--arrowed">
                             <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                                 <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
                                     <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
@@ -412,7 +415,7 @@
             </a>
         </div>
         <div class="row">
-            <div class="col-sm-8 col-lg-3">
+            <div class="col-sm-7 col-lg-3">
                 <div class="address">
                     Украина, г. Харьков, <br> ул. Енакиевская, 17
                 </div>
@@ -422,7 +425,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-sm-4 col-lg-3">
+            <div class="col-sm-5 col-lg-3 offset-lg-1">
                 <div class="phones">
                     <a href="tel:+380577780639">+38 (057) 778 06 39</a>
                     <a href="tel:+380577780644">+38 (057) 778 06 44</a>
@@ -430,7 +433,7 @@
                     <a href="tel:0800408409">0 800 408 409</a>
                 </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-4 offset-lg-1">
                 <div class="footer-info">
                      <span>
                     &copy; 2009 -
