form mask, news bg

--- a/index.html
+++ b/index.html
@@ -165,7 +165,6 @@
 
                 <p>Вы можете задать вопрос, заполнив форму, и наши менеджеры ответят вам в самое ближайшее время!</p>
                 <span class="form-btn">
-                <img src="media/close.svg" alt="">
             </span>
                 <form action="">
                     <div class="form-item">
@@ -173,7 +172,7 @@
                         <label for="name">Имя:</label>
                     </div>
                     <div class="form-item">
-                        <input type="tel" placeholder="Телефон:" name="tel" id="tel" autocomplete="off">
+                        <input type="tel"  name="tel" id="tel" autocomplete="off" placeholder="Телефон">
                         <label for="tel">Телефон:</label>
                     </div>
                     <div class="form-item">
@@ -454,6 +453,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/jquery.fancybox.min.js"></script>
+<script src="js/jquery.inputmask.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
