--- a/contacts.html
+++ b/contacts.html
@@ -249,6 +249,7 @@
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/slick.min.js"></script>
+<script src="js/jquery.inputmask.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
