anchor and preloader

--- a/index.html
+++ b/index.html
@@ -14,6 +14,29 @@
 </head>
 
 <body>
+<div id="preloader">
+    <div class="infinityChrome">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
+    <div class="infinity">
+        <div><span></span>        </div>
+        <div>            <span></span>        </div>
+        <div>            <span></span>        </div>
+    </div>
+
+    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" style="display: none;">
+        <defs>
+            <filter id="goo">
+                <feGaussianBlur in="SourceGraphic" stdDeviation="6" result="blur" />
+                <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
+                <feBlend in="SourceGraphic" in2="goo" />
+            </filter>
+        </defs>
+    </svg>
+</div>
 <header>
     <div class="header-top">
         <div class="container">
@@ -447,6 +470,9 @@
         </div>
     </div>
 </footer>
+<div id="anchor">
+    <img src="media/anchor-icon.svg" alt="">
+</div>
 
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/popper.min.js"></script>
