anchor and mob nav menu

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <img src="media/home-catalog/4.png" alt="">
                 <p>Общепромышленная вентиляция</p>
                 <div class="go-corner">
-                    <div class="go-arrow">→</div>
+                    <div class="go-arrow"></div>
                 </div>
             </a>
             </div>
@@ -277,7 +277,7 @@
                 <img src="media/home-catalog/91.png" alt="">
                 <p>Противопожарное оборудование</p>
                 <div class="go-corner">
-                    <div class="go-arrow">→</div>
+                    <div class="go-arrow"></div>
                 </div>
             </a>
             </div>
@@ -286,7 +286,7 @@
                 <img src="media/home-catalog/100.png" alt="">
                 <p>Оборудование для монтажа вентиляторов</p>
                 <div class="go-corner">
-                    <div class="go-arrow">→</div>
+                    <div class="go-arrow"></div>
                 </div>
             </a>
             </div>
@@ -296,7 +296,7 @@
                 <img src="media/home-catalog/category10.png" alt="">
                 <p>Кондиционеры центральные каркасные КЦК</p>
                 <div class="go-corner">
-                    <div class="go-arrow">→</div>
+                    <div class="go-arrow"></div>
                 </div>
             </a>
             </div>
@@ -305,7 +305,7 @@
                 <img src="media/home-catalog/74.png" alt="">
                 <p>Сетевое оборудование</p>
                 <div class="go-corner">
-                    <div class="go-arrow">→</div>
+                    <div class="go-arrow"></div>
                 </div>
             </a>
             </div>
@@ -315,7 +315,7 @@
                 <img src="media/home-catalog/category12.png" alt="">
                 <p>Автоматизация</p>
                 <div class="go-corner">
-                    <div class="go-arrow">→</div>
+                    <div class="go-arrow"></div>
                 </div>
             </a>
             </div>
@@ -324,7 +324,7 @@
                 <img src="media/home-catalog/5.png" alt="">
                 <p>Отопительное оборудование</p>
                 <div class="go-corner">
-                    <div class="go-arrow">→</div>
+                    <div class="go-arrow"></div>
                 </div>
             </a>
             </div>
@@ -333,7 +333,7 @@
                 <img src="media/home-catalog/74.png" alt="">
                 <p>Скачать каталоги</p>
                 <div class="go-corner">
-                    <div class="go-arrow">→</div>
+                    <div class="go-arrow"></div>
                 </div>
             </a>
             </div>
