--- a/index.html
+++ b/index.html
@@ -245,8 +245,12 @@
 </header>
 <section class="section1">
     <div class="top_banner_slider">
-        <div class="banner" style="background-image: url('media/banner-img/1.jpg')"></div>
-        <div class="banner" style="background-image: url('media/banner-img/3.jpg')"></div>
+        <div class="banner" style="background-image: url('media/banner-img/1.jpg')">
+            <a href=""></a>
+        </div>
+        <div class="banner" style="background-image: url('media/banner-img/3.jpg')">
+            <a href=""></a>
+        </div>
         <div class="banner" style="background-image: url('media/banner-img/4.jpg')"></div>
         <div class="banner" style="background-image: url('media/banner-img/5.jpg')"></div>
         <div class="banner" style="background-image: url('media/banner-img/6.jpg')"></div>
