--- a/product.html
+++ b/product.html
@@ -332,6 +332,7 @@
 <script src="../js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/slick.min.js"></script>
+<script src="js/jquery.inputmask.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
